--- a/ArjunaJTS/idl/pom.xml
+++ b/ArjunaJTS/idl/pom.xml
@@ -62,11 +62,21 @@
       <activation>
         <property>
           <name>idlj-enabled</name>
-          <value>true</value>
         </property>
       </activation>
       <modules>
         <module>idlj</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>jts-ibmorb</id>
+      <activation>
+        <property>
+          <name>ibmorb-enabled</name>
+        </property>
+      </activation>
+      <modules>
+        <module>ibmorb</module>
       </modules>
     </profile>
   </profiles>
