--- a/ArjunaJTS/integration/pom.xml
+++ b/ArjunaJTS/integration/pom.xml
@@ -53,6 +53,10 @@
         <configuration>
           <argLine>-Xmx256m -XX:PermSize=256M -XX:MaxPermSize=256M -Djava.util.logging.config.file=logging.properties</argLine>
           <useManifestOnlyJar>false</useManifestOnlyJar>
+          <excludes>
+            <exclude>**/SimpleIsolatedServers.java</exclude>
+          </excludes>
+
         </configuration>
       </plugin>
       <plugin>
