--- a/qa/TaskImpl.properties
+++ b/qa/TaskImpl.properties
@@ -29,6 +29,10 @@ COMMAND_LINE_1=-classpath
 # The effective properties file for JBossTS is the one in ../install/etc but note that later in this
 # file we use command line override of some properties.
 #
+# NOTE: when running with the IBM orb the narayana.sh hudson script performs a search and replace on
+# "^  dist" to add in the ibm orb dependencies - ie "^  dist" should be the first entry in the class path
+# (TODO match on COMMAND_LINE_2=... instead)
+#
 COMMAND_LINE_2=\
   dist${file.separator}narayana-full-5.0.2.Final-SNAPSHOT${file.separator}etc${file.separator}\
   ${path.separator}dist${file.separator}narayana-full-5.0.2.Final-SNAPSHOT${file.separator}lib${file.separator}*\
