--- a/qa/build.xml
+++ b/qa/build.xml
@@ -22,12 +22,10 @@
 <project name="JBossTS QA Suite Distribution" default="dist">
   <property environment="env"/>
   <property name="driver.home" value="dbdrivers"/>
-  <property name="isIdlj" value="0"/>
+  <property name="orbtype" value="jacorb"/>
   <!-- set this property to the location of a JBossTS JTA/JTS build or installation -->
   <property name="org.jboss.jbossts.qa.ts.home" location="dist"/>
   <property name="narayana.version" value="5.0.2.Final-SNAPSHOT"/>
-  <!-- TODO cd ArjunaJTS/orbportability; ant -f build-anttasks.xml -->
-  <property name="org.jboss.jbossts.qa.idlcompiler.lib" location="../ArjunaJTS/orbportability/lib/ext"/>
   <!-- you should not need to configure anything below here -->
   <!--
         This is a redhat vpn server. for non-vpn use, mirror it locally or copy the drivers by hand.
@@ -38,21 +36,6 @@
   <property name="driver.url" value="http://www.qa.jboss.com/jdbc-drivers/"/>
   <property name="org.jboss.jbossts.qa.server_manager_location" location="ext/jboss-server-manager-0.1.1.GA.jar"/>
   <property name="org.jboss.jbossts.qa.dist.buildroot" location="build"/>
-
-  <target name="which-jts-jar">
-    <condition property="cp-jacorb-jts">
-        <and>
-            <equals arg1="${isIdlj}" arg2="0"/>
-            <not><isset property="init-jta"/></not>
-        </and>
-    </condition>
-    <condition property="cp-idlj-jts">
-        <and>
-            <equals arg1="${isIdlj}" arg2="1"/>
-            <not><isset property="init-jta"/></not>
-        </and>
-    </condition>
-  </target>
 
   <target name="get.drivers" depends="clean-dbdrivers">
     <!--
@@ -128,20 +111,17 @@
     <copy file="${org.jboss.jbossts.qa.ts.home}/narayana-full-${narayana.version}/lib/jta/narayana-jta.jar" tofile="${org.jboss.jbossts.qa.ts.home}/narayana-full-${narayana.version}/lib/narayana-jta.jar"/>
   </target>
 
-  <target name="init-jts" depends="jts.cp.jacorb,jts.cp.idlj"/>
-  <target name="jts.cp.jacorb" depends="which-jts-jar" if="cp-jacorb-jts">
-    <echo>copying jacorb jts</echo>
-    <copy file="${org.jboss.jbossts.qa.ts.home}/narayana-full-${narayana.version}/lib/jts/narayana-jts-jacorb.jar" tofile="${org.jboss.jbossts.qa.ts.home}/narayana-full-${narayana.version}/lib/jbossjts.jar"/>
-  </target>
-  <target name="jts.cp.idlj" depends="which-jts-jar" if="cp-idlj-jts">
-    <echo>copying idlj jts</echo>
-    <copy file="${org.jboss.jbossts.qa.ts.home}/narayana-full-${narayana.version}/lib/jts/narayana-jts-idlj.jar" tofile="${org.jboss.jbossts.qa.ts.home}/narayana-full-${narayana.version}/lib/jbossjts.jar"/>
+  <target name="init-jts" depends="jts.cp"/>
+
+  <target name="jts.cp">
+    <echo>copying ${orbtype} jts</echo>
+    <copy file="${org.jboss.jbossts.qa.ts.home}/narayana-full-${narayana.version}/lib/jts/narayana-jts-${orbtype}.jar" tofile="${org.jboss.jbossts.qa.ts.home}/narayana-full-${narayana.version}/lib/jbossjts.jar"/>
   </target>
 
   <target name="dist" depends="clean, init, buildtype">
     <!-- build the test suite -->
     <ant dir="tests" antfile="build-${buildtype}.xml">
-      <property name="isIdlj" value="${isIdlj}"/>
+      <property name="orbtype" value="${orbtype}"/>
       <property name="org.jboss.jbossts.qa.server_manager_location" value="${org.jboss.jbossts.qa.server_manager_location}"/>
     </ant>
   </target>
