--- a/ArjunaJTS/narayana-jts-jacorb/pom.xml
+++ b/ArjunaJTS/narayana-jts-jacorb/pom.xml
@@ -173,6 +173,10 @@
             <groupId>org.jboss.narayana.jts</groupId>
             <artifactId>idlj-idl</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>org.jboss.narayana.jts</groupId>
+            <artifactId>ibmorb-idl</artifactId>
+          </exclusion>
         </exclusions>
     </dependency>
     <dependency>
@@ -184,6 +188,10 @@
             <groupId>org.jboss.narayana.jts</groupId>
             <artifactId>idlj-idl</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>org.jboss.narayana.jts</groupId>
+            <artifactId>ibmorb-idl</artifactId>
+          </exclusion>
         </exclusions>
     </dependency>
     <dependency>
@@ -194,6 +202,10 @@
           <exclusion>
             <groupId>org.jboss.narayana.jts</groupId>
             <artifactId>idlj-idl</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.jboss.narayana.jts</groupId>
+            <artifactId>ibmorb-idl</artifactId>
           </exclusion>
         </exclusions>
     </dependency>
@@ -234,6 +246,29 @@
                 <manifestEntries>
                   <arjuna-scm-revision>${buildNumber}</arjuna-scm-revision>
                   <arjuna-properties-file>jbossts-idlj-properties.xml</arjuna-properties-file>
+                  <arjuna-builder>JBoss Inc. [${user.name}] ${os.name} ${os.version} ${buildproperty.date}</arjuna-builder>
+                </manifestEntries>
+              </archive>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>ibmorb</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <configuration>
+              <archive>
+                <manifestEntries>
+                  <arjuna-scm-revision>${buildNumber}</arjuna-scm-revision>
+                  <arjuna-properties-file>jbossts-ibmorb-properties.xml</arjuna-properties-file>
                   <arjuna-builder>JBoss Inc. [${user.name}] ${os.name} ${os.version} ${buildproperty.date}</arjuna-builder>
                 </manifestEntries>
               </archive>
