--- a/txframework/pom.xml
+++ b/txframework/pom.xml
@@ -240,7 +240,48 @@
                                 -->
                                 <server.jvm.args>${jvm.args.other} ${jvm.args.byteman} ${jvm.args.memory} ${jvm.args.debug}</server.jvm.args>
                                 <node.address>127.0.0.1</node.address>
+                                <server.config>standalone.xml</server.config>
                             </systemPropertyVariables>
+                            <includes>
+                              <include>**/*TestLocal.java</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>arq-distributed</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-managed</artifactId>
+                    <version>${jboss-as.version}</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                            <skip>false</skip>
+                            <systemPropertyVariables combine.children="append">
+                                <!--
+                                    Used in arquillian.xml
+                                -->
+                                <server.jvm.args>${jvm.args.other} ${jvm.args.byteman} ${jvm.args.memory} ${jvm.args.debug}</server.jvm.args>
+                                <node.address>127.0.0.1</node.address>
+                                <server.config>standalone-xts.xml</server.config>
+                            </systemPropertyVariables>
+                            <includes>
+                              <include>**/*TestRemote.java</include>
+                            </includes>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -274,7 +315,49 @@
                                 -->
                                 <server.jvm.args>${jvm.args.other} ${jvm.args.byteman} ${jvm.args.memory} ${ipv6.server.jvm.args} ${jvm.args.debug}</server.jvm.args>
                                 <node.address>[::1]</node.address>
+                                <server.config>standalone.xml</server.config>
                             </systemPropertyVariables>
+                            <includes>
+                              <include>**/*TestLocal.java</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>arqIPv6-distributed</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-managed</artifactId>
+                    <version>${jboss-as.version}</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                            <skip>false</skip>
+                            <argLine>${ipv6.server.jvm.args}</argLine>
+                            <systemPropertyVariables combine.children="append">
+                                <!--
+                                    Used in arquillian.xml
+                                -->
+                                <server.jvm.args>${jvm.args.other} ${jvm.args.byteman} ${jvm.args.memory} ${ipv6.server.jvm.args} ${jvm.args.debug}</server.jvm.args>
+                                <node.address>[::1]</node.address>
+                                <server.config>standalone-xts.xml</server.config>
+                            </systemPropertyVariables>
+                            <includes>
+                              <include>**/*TestRemote.java</include>
+                            </includes>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -296,6 +379,7 @@
                                     Used in arquillian.xml
                                 -->
                                 <node.address>127.0.0.1</node.address>
+                                <server.config>standalone.xml</server.config>
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
