[JBTM-2110] Add configurable command line arg to QA tasks

--- a/qa/TaskImpl.properties
+++ b/qa/TaskImpl.properties
@@ -80,6 +80,8 @@ COMMAND_LINE_13=-DCoordinatorEnvironmentBean.defaultTimeout=120
 # Remove this line if we want to test this in QA, or enable on a per case basis.
 COMMAND_LINE_14=-DCoordinatorEnvironmentBean.dynamic1PC=false
 
+NEXT_COMMAND_LINE_ARG=COMMAND_LINE_15
+
 #
 # enable these to debug spawned processes. You may need to pause the test
 # framework in a debugger too, or it may spawn multiple procs on the same
