--- a/rts/at/tx/pom.xml
+++ b/rts/at/tx/pom.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-	JBoss, Home of Professional Open Source Copyright 2010, Red Hat
-	Middleware LLC, and others contributors as indicated by the @authors
-	tag. All rights reserved. See the copyright.txt in the distribution
-	for a full listing of individual contributors. This copyrighted
-	material is made available to anyone wishing to use, modify, copy, or
-	redistribute it subject to the terms and conditions of the GNU Lesser
-	General Public License, v. 2.1. This program is distributed in the
-	hope that it will be useful, but WITHOUT A WARRANTY; without even the
-	implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
-	PURPOSE. See the GNU Lesser General Public License for more details.
-	You should have received a copy of the GNU Lesser General Public
-	License, v.2.1 along with this distribution; if not, write to the Free
-	Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
-	02110-1301, USA.
+    JBoss, Home of Professional Open Source Copyright 2010, Red Hat
+    Middleware LLC, and others contributors as indicated by the @authors
+    tag. All rights reserved. See the copyright.txt in the distribution
+    for a full listing of individual contributors. This copyrighted
+    material is made available to anyone wishing to use, modify, copy, or
+    redistribute it subject to the terms and conditions of the GNU Lesser
+    General Public License, v. 2.1. This program is distributed in the
+    hope that it will be useful, but WITHOUT A WARRANTY; without even the
+    implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
+    PURPOSE. See the GNU Lesser General Public License for more details.
+    You should have received a copy of the GNU Lesser General Public
+    License, v.2.1 along with this distribution; if not, write to the Free
+    Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
+    02110-1301, USA.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
@@ -31,20 +31,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
     <javaee6.with.tools.version>1.0.0.M7</javaee6.with.tools.version>
+    <!-- ssl debug: -Djavax.net.debug=ssl:handshake  http://docs.oracle.com/javase/6/docs/technotes/guides/security/jsse/JSSERefGuide.html#Debug
+     -->
+    <spdy.args>-Xbootclasspath/p:${basedir}/src/test/resources/grizzly-npn-bootstrap-1.0.jar -Drts.usespdy=true -Djavax.net.ssl.trustStore=keystore.jks -Djavax.net.ssl.trustStorePassword=123456</spdy.args>
+    <ssl.args>-Drts.usessl=true -Djavax.net.ssl.trustStore=keystore.jks -Djavax.net.ssl.trustStorePassword=123456</ssl.args>
   </properties>
 
   <repositories>
-    <repository>
-      <id>jboss-public-repository-group</id>
-      <name>JBoss Public Maven Repository Group</name>
-      <url>https://repository.jboss.org/nexus/content/groups/public/</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
     <!-- Jersey -->
     <repository>
       <id>maven2-repository.dev.java.net</id>
@@ -98,24 +91,19 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.sun.jersey</groupId>
-      <artifactId>jersey-server</artifactId>
-      <version>${version.com.sun.jersey}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.sun.jersey.jersey-test-framework</groupId>
-      <artifactId>jersey-test-framework-grizzly</artifactId>
-      <version>${version.com.sun.jersey}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>com.sun.grizzly</groupId>
       <artifactId>grizzly-servlet-webserver</artifactId>
       <version>${version.com.sun.grizzly}</version>
       <scope>test</scope>
     </dependency>
     <!-- end Jersey -->
+
+    <dependency>
+      <groupId>org.jboss.narayana</groupId>
+      <artifactId>test-utils</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.jboss.narayana.jta</groupId>
       <artifactId>narayana-jta</artifactId>
@@ -181,6 +169,35 @@
       <version>${version.com.h2database}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${version.junit}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- grizzly with SPDY -->
+    <dependency>
+        <groupId>org.glassfish.jersey.containers</groupId>
+        <artifactId>jersey-container-grizzly2-servlet</artifactId>
+        <version>2.7</version>
+        <scope>test</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>org.glassfish.grizzly</groupId>
+        <artifactId>grizzly-spdy</artifactId>
+        <version>2.3.11</version>
+        <scope>test</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>org.glassfish.grizzly</groupId>
+        <artifactId>grizzly-npn-bootstrap</artifactId>
+        <version>1.0</version>
+        <scope>test</scope>
+    </dependency>
+    <!-- end grizzly with spdy -->
   </dependencies>
   <build>
     <plugins>
@@ -228,9 +245,67 @@
           </execution>
         </executions>
       </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                  <forkMode>pertest</forkMode>
+                  <!--
+                  <argLine>${surefireArgLine}</argLine>
+                  -->
+              </configuration>
+          </plugin>
+      <!--
+          -->
     </plugins>
   </build>
   <profiles>
+    <profile>
+        <id>ssl</id>
+        <activation>
+          <activeByDefault>false</activeByDefault>
+        </activation>
+
+        <dependencies>
+        </dependencies>
+        <build>  
+          <plugins>
+            <plugin>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+              <!--
+                <argLine>${ssl.args} ${surefireArgLine}</argLine>
+                -->
+                <argLine>${ssl.args}</argLine>
+              </configuration>
+            </plugin>
+          </plugins>
+
+        </build>
+    </profile>
+    <profile>
+        <id>spdy</id>
+        <activation>
+          <activeByDefault>false</activeByDefault>
+        </activation>
+
+        <dependencies>
+        </dependencies>
+        <build>  
+          <plugins>
+            <plugin>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+              <!--
+                <argLine>${spdy.args} ${surefireArgLine}</argLine>
+                -->
+                <argLine>${spdy.args}</argLine>
+              </configuration>
+            </plugin>
+          </plugins>
+
+        </build>
+    </profile>
     <profile>
         <id>release</id>
         <build>
