JBTM-2163 Update to add narayana jta bundle and feature

--- a/pom.xml
+++ b/pom.xml
@@ -472,6 +472,7 @@
     <module>txbridge</module>
     <module>STM</module>
     <module>txframework</module>
+    <module>osgi</module>
   </modules>
   <profiles>
     <profile>
