[JBTM-1453] More regression tests

--- a/ArjunaJTA/jta/pom.xml
+++ b/ArjunaJTA/jta/pom.xml
@@ -216,8 +216,14 @@
             <version>${version.javax.annotation}</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+          <groupId>org.jboss.narayana</groupId>
+          <artifactId>test-utils</artifactId>
+          <version>${project.version}</version>
+          <scope>test</scope>
+        </dependency>
   </dependencies>
+
   <profiles>
       <profile>
           <id>release</id>
