[JBTM-1453] Better control over when regression checks are enabled

--- a/qa/TaskImpl.properties
+++ b/qa/TaskImpl.properties
@@ -79,8 +79,9 @@ COMMAND_LINE_13=-DCoordinatorEnvironmentBean.defaultTimeout=120
 # Disable dynamic 1PC optimisation.
 # Remove this line if we want to test this in QA, or enable on a per case basis.
 COMMAND_LINE_14=-DCoordinatorEnvironmentBean.dynamic1PC=false
+COMMAND_LINE_15=-Dio.narayana.perf.failonregression=false
 
-NEXT_COMMAND_LINE_ARG=COMMAND_LINE_15
+NEXT_COMMAND_LINE_ARG=COMMAND_LINE_16
 
 #
 # enable these to debug spawned processes. You may need to pause the test
