--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,7 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
+            <argLine>${surefireArgLine}</argLine>
             <forkMode>pertest</forkMode>
             <workingDirectory>target/test-classes</workingDirectory>
             <runOrder>alphabetical</runOrder>
