JBTM-2237 Updated to build IDLj orb as part of the main build

--- a/ArjunaJTS/orbportability/pom.xml
+++ b/ArjunaJTS/orbportability/pom.xml
@@ -240,7 +240,7 @@
       <id>jts-idlj</id>
       <activation>
         <property>
-          <name>idlj-enabled</name>
+          <name>!idlj-disabled</name>
         </property>
       </activation>
       
