--- a/ArjunaJTS/idl/pom.xml
+++ b/ArjunaJTS/idl/pom.xml
@@ -61,7 +61,7 @@
       <id>jts-idlj</id>
       <activation>
         <property>
-          <name>idlj-enabled</name>
+          <name>!idlj-disabled</name>
         </property>
       </activation>
       <modules>
