--- a/ArjunaJTS/jtax/pom.xml
+++ b/ArjunaJTS/jtax/pom.xml
@@ -214,7 +214,7 @@
       <id>jts-idlj</id>
       <activation>
         <property>
-          <name>idlj-enabled</name>
+          <name>!idlj-disabled</name>
         </property>
       </activation>
       
