--- a/ArjunaJTS/pom.xml
+++ b/ArjunaJTS/pom.xml
@@ -59,7 +59,7 @@
         <id>jts-idlj</id>
         <activation>
             <property>
-              <name>idlj-enabled</name>
+              <name>!idlj-disabled</name>
             </property>
         </activation>
         <modules>
