--- a/narayana-full/pom.xml
+++ b/narayana-full/pom.xml
@@ -208,7 +208,7 @@
       <id>jts-idlj</id>
       <activation>
         <property>
-          <name>idlj-enabled</name>
+          <name>!idlj-disabled</name>
         </property>
       </activation>
      
